feat: integrate Fly.io deployment and Docker setup
- Updated package.json to run build with secrets loading script.
- Removed base path configuration from vite.config.ts.
- Added .dockerignore to exclude unnecessary files from Docker context.
- Created GitHub Actions workflow for continuous deployment to Fly.io.
- Added Dockerfile for building and serving the Vite application.
- Configured fly.toml for Fly.io app deployment.
- Implemented load-secrets.sh script to manage environment variables securely.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "scripts/load-secrets.sh vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@flydotio/dockerfile": "^0.7.10",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
