--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "DOCKER_BUILDKIT=1 flyctl deploy"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/supabase-js": "^2.49.4",
@@ -18,7 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
-    "openai": "^4.85.4",
+    "openai": "^4.96.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
