--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ngneat/falso": "^7.3.0",
     "@headlessui/react": "^2.2.2",
+    "@ngneat/falso": "^7.3.0",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/supabase-js": "^2.49.4",
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "openai": "^4.96.0",
+    "posthog-js": "^1.236.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
