--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.0.7",
+    "@vitest/coverage-v8": "^3.1.2",
     "chromium-bidi": "^4.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
