--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "openai": "^4.96.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0",
+    "react-router": ">=7.5.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.7",
     "tailwindcss-animate": "^1.0.7"
